--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ nav a{
 }
 .btn:hover{
     scale: 1.05;
-    box-shadow: 0px 0px 10px 0px;
+    box-shadow: 0px 0px 10px 0px black;
 }
 .btn:active{
     scale: 1; 
@@ -108,5 +108,5 @@ nav a{
     border: 1px solid red;
 }
 .brb{
-    border: 1px solid rgb(238, 238, 238);
+    border: 1px solid blue;
 }
