--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ button:disabled{
     border: 5px solid transparent;
     border-top: 5px solid crimson;
     border-bottom: 5px solid #222;
-    margin: 0 auto;
+    margin: 6rem auto;
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
