--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,8 @@ body{
 
 .cont{
     max-width: 1280px;
-    margin: 3rem auto 1rem;
+    margin: 0rem auto;
+    padding: 3rem 0 1rem;
     
 }
 .cont h2{
