--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@
 @tailwind utilities;
 
 @layer base {
+
     /* For light */
-    :root {        
+    :root {
         --color-low: 51 51 51;
         --color-mid: 34 34 34;
         --color-high: 17 17 17;
@@ -14,12 +15,13 @@
         --color-background: 255 227 194;
         /* ... */
     }
+
     :root[data-theme="dark"] {
         --color-low: 164 164 164;
         --color-mid: 202 202 202;
         --color-high: 238 238 238;
         --color-crim: 219 20 60;
-        --color-background: 33 33 33; 
+        --color-background: 33 33 33;
     }
 }
 
@@ -29,7 +31,7 @@
 } */
 
 
-body{
+body {
     background-color: var(--color-background);
     /* background-color: rgb(255, 227, 194); */
     font-family: 'Poppins', sans-serif;
@@ -37,22 +39,23 @@ body{
     margin: 0 auto;
 }
 
-main{
+main {
     min-height: 100vh;
 }
 
-.cont{
+.cont {
     max-width: 1280px;
     margin: 0rem auto;
     padding: 3rem 0 1rem;
-    
+
 }
-.cont h2{
+
+.cont h2 {
     margin-bottom: 2rem;
     font-size: 2.25rem;
     text-align: center;
     font-weight: 500;
-} 
+}
 
 label {
     font-size: 1.2rem;
@@ -73,52 +76,56 @@ input:focus {
 
 
 
-.active{
+.active {
     background-color: rgb(219, 20, 60);
     color: white;
 }
 
-.member{
+.member {
     background-image: url('/Sprinkle.svg');
 }
 
-nav a{
-    border: 1px solid var(--color-crim); /*This doesn't work*/
+nav a {
+    border: 1px solid var(--color-crim);
+    /*This doesn't work*/
     border-radius: 5px;
     padding: 2px 8px;
     color: crimson;
-    transition: all 0.2s; 
+    transition: all 0.2s;
 }
-nav a:hover:not(.login){
+
+nav a:hover:not(.login) {
     color: white;
 }
 
-.banner img{
+.banner img {
     height: 600px;
     width: 100%;
     object-fit: cover;
 }
 
-.btn:not(.input-btn){
+.btn:not(.input-btn) {
     /* border: 1px solid black; */
     border-radius: 5px;
     transition: all 0.2s;
     font-weight: 500;
 }
-.btn:hover{
+
+.btn:hover {
     scale: 1.05;
     box-shadow: 0px 0px 10px 0px black;
 }
-.btn:active{
-    scale: 1; 
+
+.btn:active {
+    scale: 1;
     box-shadow: none;
 }
 
-button:disabled{
+button:disabled {
     opacity: 0.5;
 }
 
-#borrow-modal{
+#borrow-modal {
     transition: all 2s;
 }
 
@@ -131,27 +138,34 @@ button:disabled{
     width: 4rem;
     border-radius: 50%;
     animation: spin infinite 1s;
-  }
-  @keyframes spin {
+}
+
+@keyframes spin {
     from {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
-  
+
     to {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  
-  .brr {
-    border: 1px solid red;
-  }
+}
 
-
-
-
-.brr{
+.brr {
     border: 1px solid red;
 }
-.brb{
+
+.brb {
     border: 1px solid blue;
+}
+
+@media screen and (max-width:767px) {
+    .cont{
+        padding: 1rem 0 0.5rem;
+    }
+    .cont h2{
+        font-size: 2rem;
+    }
+    input{
+        padding: 0.5rem;
+    }
 }
